pgrx-tests/tests/todo/random-vec-strs-arent-okay.stderr
error[E0277]: the trait bound `Vec<Option<&str>>: ArgAbi<'_>` is not satisfied
 --> tests/todo/random-vec-strs-arent-okay.rs:8:5
  |
8 |     args: default!(Vec<Option<&'a str>>, "ARRAY[]::text[]"),
  |     ^^^^ the trait `ArgAbi<'_>` is not implemented for `Vec<Option<&str>>`
  |
  = help: the following other types implement trait `ArgAbi<'fcx>`:
            Vec<Option<T>>
            Vec<T>
            Vec<u8>
note: required by a bound in `pgrx::callconv::Arguments::<'a, 'fcx>::unbox_next_unchecked`
 --> $WORKSPACE/pgrx/src/callconv.rs
  |
  |     pub unsafe fn unbox_next_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
  |                                           ^^^^^^^^^^^^ required by this bound in `Arguments::<'a, 'fcx>::unbox_next_unchecked`
